k8s/21-user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopmate-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopmate-user
  template:
    metadata:
      labels:
        app: shopmate-user
    spec:
      containers:
        - name: user-service
          image: shopmate-user:latest
          imagePullPolicy: IfNotPresent
          # For AWS ECR, update image URI
          ports:
            - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: shopmate-user
spec:
  ports:
    - port: 8002
      targetPort: 8002
  selector:
    app: shopmate-user
