k8s/22-product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopmate-product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopmate-product
  template:
    metadata:
      labels:
        app: shopmate-product
    spec:
      containers:
        - name: product-service
          image: shopmate-product:latest
          imagePullPolicy: IfNotPresent
          # For AWS ECR, update image URI
          ports:
            - containerPort: 8003
---
apiVersion: v1
kind: Service
metadata:
  name: shopmate-product
spec:
  ports:
    - port: 8003
      targetPort: 8003
  selector:
    app: shopmate-product
