k8s/25-order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopmate-order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopmate-order
  template:
    metadata:
      labels:
        app: shopmate-order
    spec:
      containers:
        - name: order-service
          image: shopmate-order:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8006
---
apiVersion: v1
kind: Service
metadata:
  name: shopmate-order
spec:
  ports:
    - port: 8006
      targetPort: 8006
  selector:
    app: shopmate-order
