k8s/26-payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopmate-payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopmate-payment
  template:
    metadata:
      labels:
        app: shopmate-payment
    spec:
      containers:
        - name: payment-service
          image: shopmate-payment:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8007
---
apiVersion: v1
kind: Service
metadata:
  name: shopmate-payment
spec:
  ports:
    - port: 8007
      targetPort: 8007
  selector:
    app: shopmate-payment
