k8s/30-api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopmate-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopmate-gateway
  template:
    metadata:
      labels:
        app: shopmate-gateway
    spec:
      containers:
        - name: api-gateway
          image: shopmate-gateway:latest
          imagePullPolicy: IfNotPresent
          # For AWS ECR, update image URI
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: shopmate-gateway
spec:
  # For AWS LoadBalancer only on Gateway: 
  # type: LoadBalancer
  # annotations:
  #   service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: shopmate-gateway
